# blueprints/products/schemas.py
@@ -1,10 +1,20 @@
+from marshmallow import EXCLUDE
 from app.extensions import ma
-from app.models import CartItem
+from app.models import Product
 
-class CartItemSchema(ma.SQLAlchemyAutoSchema):
+
+class ProductSchema(ma.SQLAlchemyAutoSchema):
     class Meta:
-        model = CartItem
+        model = Product
         load_instance = True
+        include_fk = True
+        ordered = True
+        unknown = EXCLUDE
 
-cart_item_schema = CartItemSchema()
-cart_items_schema = CartItemSchema(many=True)
+    id = ma.auto_field(dump_only=True)
+    created_at = ma.auto_field(dump_only=True)
+    updated_at = ma.auto_field(dump_only=True)
+
+
+product_schema = ProductSchema()
+products_schema = ProductSchema(many=True)
